public/styles/media-query.css
@media(max-width: 390px) and (max-height: 844px) {
  .routes-container-nlg {
    overflow-x: hidden;
    padding: 1rem 1rem;
  }
  
  .signup-btn, .login-btn {
    width: 13.5rem;
  }

  .signup-btn-container, .login-btn-container {
    padding-top: 1rem;
    display: flex;
    align-items: center;
  }

  .signup-container, .login-container {
    margin: 0;
    width: 100%;
    padding: 2rem 0;
  }
  
  .form-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
  }

  .form-input {
    border: 1px solid #c4c4c4;
    border-radius: 5px;
    width: 14.5rem;
    height: 1.5rem;
    font-size: .75rem;
    align-items: center;
  }

  .form-label {
    font-size: .6rem;
    color: #575757;
    padding: 0 0 .25rem 0;
  }

  .form-input-container {
    display: flex;
    justify-content: center;
    padding: 0;
    margin: 0;
  }

  .form-small-text {
    font-size: .6rem;
    padding-top: 1.25rem;
    text-align: center;
  }

  .form-disclaimer {
    align-self: flex-start;
    font-size: .6rem;
    padding-top: 1.25rem;
  }

  .disclaimer-container {
    padding: 0.5rem;
  }

  .disclaimer-btn {
    height: 1.5rem;
    font-size: .8rem;
  }

  .homepage-container, .musclegroup-container {
    padding: 0.5rem;
  }

  .homepage-btn-link {
    font-weight: 600;
  }

  .cw-btn-container {
    display: flex;
    justify-content: space-between;
    margin: .6rem;
  }

  .cw-add-btn, .cw-delete-btn {
    width: 6rem;
    height: 1.25rem;
    font-size: .75rem;
  }

  .cw-single-exercise-container {
    margin: 1.25rem 0;
  }

  .cw-workout-name {
    margin: 1rem 0 0 0;
    font-weight: 700;
  }
}

